--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
+minilm-uchicago-msads-finetuned_v2/** filter=lfs diff=lfs merge=lfs -text
 *.pt filter=lfs diff=lfs merge=lfs -text
 *.safetensors filter=lfs diff=lfs merge=lfs -text
